# pysubtools

./: .flake8  .pylintrc  LICENSE  README  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
pysubtools/: __init__.py  subtitle.py  utils.py
pysubtools/exporters/: __init__.py  base.py  subrip.py
pysubtools/parsers/: __init__.py  base.py  encodings.py  microdvd.py  subrip.py
requirements/: dev-3.txt  dev.txt
tests/: pysubtools_test.py
tests/data/corner/: autodetect.srt  encoding_detection.srt  encoding_error.srt  high_mem.srt  lookup_error.srt
tests/data/microdvd/: 1.sif  1.sub  2.msgs.yaml  2.sif  2.sub  3.msgs.yaml  3.sif  3.sub  4.sif  4.sub  5.msgs.yaml  5.sif  5.sub  6.sif  6.sub
tests/data/srt/: 1.msgs.yaml  1.pickle  1.sif  1.srt  1.srt.pickle  10.msgs.yaml  10.pickle  10.sif  10.srt  10.srt.pickle  11.msgs.yaml  11.pickle  11.sif  11.srt  11.srt.pickle  12.msgs.yaml  12.pickle  12.sif  12.srt  12.srt.pickle  13.msgs.yaml  13.sif  13.srt  14.msgs.yaml  14.sif  14.srt  15.msgs.yaml  15.sif  15.srt  16.msgs.yaml  16.sif  16.srt  17.msgs.yaml  17.sif  17.srt  18.msgs.yaml  18.sif  18.srt  19.msgs.yaml  19.sif  (+49 more)
