[project]
name = "PySubTools"
version = "0.1.5"
description = "A set of parsers and exports for subtitles in various formats"
readme = "README"
requires-python = ">=3.8"
dependencies = []
authors = [
    { name="Gregor Kališnik", email="gregor@kalisnik.si" },
    { name="Unimatrix", email="info@unimatrix.si" }
]
license = { file = "LICENSE" }
keywords = ["parsing", "exporting", "subtitles", "srt"]