[project]
name = "PySubTools"
version = "0.1.5"
description = "A set of parsers and exports for subtitles in various formats"
readme = "README"
requires-python = ">=3.8"
dependencies = [
    "charset-normalizer>=3.4.4",
    "pyyaml>=6.0.3",
    "state-machine>=0.2.10",
]
authors = [
    { name="Gregor Kališnik", email="gregor@kalisnik.si" },
    { name="Unimatrix", email="info@unimatrix.si" }
]
license = { file = "LICENSE" }
keywords = ["parsing", "exporting", "subtitles", "srt"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "ruff>=0.14.11",
]
